<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/login_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <!--    <include layout="@layout/toolbar" />-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_head" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/main_name"
                android:textColor="@color/white_my"
                android:textSize="26sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/logo_title"
                android:textColor="@color/white_my"
                android:textSize="30sp" />
        </LinearLayout>


        <!--  <View
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="0.8" />-->

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/allLy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="账号："
                android:textColor="#273440"
                android:textSize="@dimen/textsizeloginuser" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/margintop"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_operation_tv"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/login_user_new" />


                <EditText

                    android:id="@+id/usernameEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/hintstr"
                    android:text=""
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/common_blue"
                    android:textColorHint="@color/text_color"


                    android:textSize="@dimen/textsizeloginuser" />
                <!--ZYSYWZXGCXJ1-->
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="密码："
                    android:textColor="#273440"
                    android:textSize="@dimen/textsizeloginuser" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="忘记密码?"
                    android:textColor="#259afd"
                    android:textSize="@dimen/textsizeloginuser"
                    android:visibility="gone" />

            </FrameLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/margintop"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_operation_tv"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/login_ps_new" />


                <EditText
                    android:maxLines="1"
                    android:id="@+id/psEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/hintps"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="@color/common_blue"
                    android:textColorHint="@color/text_color"
                    android:textSize="@dimen/textsizeloginuser" />
                <!--123456-->
            </LinearLayout>

            <TextView
                android:id="@+id/bt_login"

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_bt_start_yunwei"
                android:gravity="center"
                android:letterSpacing="0.5"
                android:text="@string/text_login_bt_tip"
                android:textColor="@color/white_my"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="#fff"
                android:textSize="12sp"
                android:lineSpacingExtra="3dp"/>

            <TextView
                android:id="@+id/versionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="当前版本号"
                android:visibility="gone"
                android:textColor="#b3ffffff"
                android:textSize="14sp" />
            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/design_company_name"
                android:textColor="#b3ffffff"
                android:textSize="14sp" />
        </FrameLayout>
    </LinearLayout>



</FrameLayout>
